cluster/apps/default/landing-page/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-page-deployment
  labels:
    app: landing-page
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing-page
  template:
    metadata:
      labels:
        app: landing-page
    spec:
      containers:
        - name: landing-page
          image: nginxdemos/hello
          ports:
            - containerPort: 80
